# rs_compiler_guide

./: .gitignore  Cargo.toml  README.md  grammar.bnf  grammar.ebnf
.github/workflows/: mdbook.yml
book/book/: error_handling_with_ariadne.html  getting_started.html  implementing_an_ast.html  intermediate_representation.html  lexer.html  lr_parsing.html  parsing_and_syntax_analysis.html  parsing_techniques.html  print.html  recursive_descent_parsing.html  searchindex.js  searchindex.json  semantic_analysis.html  tokens.html
book/src/: abstract_syntax_trees.md  context_free_grammars.md  error_handling_with_ariadne.md  finite_automata.md  implementing_a_symbol_table.md  parsing_techniques.md  recursive_descent_parsing.md  tokens.md  type_checking.md
docs/book/: 404.html  abstract_syntax_trees.html  code_generation.html  context_free_grammars.html  error_handling.html  error_handling_with_codespan_reporting.html  finite_automata.html  implementing_a_parser.html  implementing_a_semantic_analyzer.html  implementing_a_symbol_table.html  index.html  lexical_analysis.html  ll_k_parsing.html  postlude.html  symbol_tables.html  type_checking.html
docs/src/: SUMMARY.md  implementing_a_parser.md  introduction.md  lexer.md  lexical_analysis.md  parsing_and_syntax_analysis.md
guide/: book.toml
guide/src/: SUMMARY.md  context_free_grammars.md  error_handling.md  error_handling_with_codespan_reporting.md  getting_started.md  implementing_a_parser.md  s.md  (+11 more)
src/: ast.rs  errors.rs  files.rs  lexer.rs  main.rs  parser.rs  token.rs
tests/: add.pyl  error.pyl  simple_tokens.pyl
(+18 files in other folders)
