[package]
name = "compile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
ariadne = "0.4.0"
chumsky = "0.9.3"
env_logger = "0.11.3"
gumdrop = "0.8.1"
log = "0.4.21"
test-log = "0.2.15"
thiserror = "1.0.58"